--- a/app/src/main/res/layout/activity_notas.xml
+++ b/app/src/main/res/layout/activity_notas.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".NotasActivity">
+    tools:context=".DashboardActivity">
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
